# libshimejifinder

./: .gitignore  .gitmodules  CMakeLists.txt  bin2cpp.sh  main.cc  make_default_xmls.sh
shimejifinder/: analyze.cc  analyze.hpp  archive.cc  archive.hpp  archive_entry.cc  archive_entry.hpp  archive_folder.cc  archive_folder.hpp  extract_target.cc  extract_target.hpp  extractor.hpp  fs_extractor.cc  fs_extractor.hpp  fs_thumb_extractor.cc  fs_thumb_extractor.hpp  icu.cc  icu.hpp  memory_extractor.cc  shimejifinder.hpp  utf8_convert.hpp  utils.cc  utils.hpp
shimejifinder/libarchive/: archive.cc  archive.hpp
shimejifinder/libunarr/: archive.cc  archive.hpp  unarr_FILE.c  unarr_FILE.h
shimejifinder/utf8_convert/: jni.cc
tests/utf8_convert/jni/: main.cc
